--- a/css/Suplementos.css
+++ b/css/Suplementos.css
@@ -425,7 +425,8 @@ body {
 .talla {
   cursor: pointer;
   margin-right: 5px;
-  padding: 2px 6px;
+  padding: 3px px;
+  padding-left: 0px;
   border: 1px solid #aaa;
   border-radius: 4px;
   user-select: none;
@@ -437,7 +438,10 @@ body {
 }
 
 .tallas {
-  font-size: 14px; /* Puedes ajustar a 12px, 16px, 1em, etc. */
-  color: #757575;
+  display: flex;
+  gap: 8px; /* Ajusta según el espacio que desees */
+  justify-content: center; /* Centra las tallas si quieres */
+  margin-top: 10px; /* Opcional para separación vertical */
+  flex-wrap: wrap; /* Opcional si las tallas son muchas */
 }
 
