--- a/css/styles.css
+++ b/css/styles.css
@@ -319,9 +319,14 @@ body {
   width: 100%;
   height: auto;
 }
-
-.product-info {
-  padding: 15px;
+.product-info p {
+  font-size: 14px;
+  color: #000000;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .badge {
